// Copyright 2022, OpenSergo Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package io.opensergo.proto.common.v1;

option java_package = "io.opensergo.proto.common.v1";
option java_outer_classname = "CommonProto";
option java_multiple_files = true;
option go_package = "github.com/opensergo/opensergo-control-plane/pkg/proto/common/v1";

enum TimeUnit {
  // The time unit is not known.
  UNKNOWN = 0;

  MILLISECOND = 1;
  SECOND = 2;
  MINUTE = 3;
  HOUR = 4;
  DAY = 5;
}